--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 
     <div class="off-canvas">
       <figure class="avatar">
-        <img src="{{ site.baseurl }}/assets/img/avatar.jpg" alt="Picture" title="That's me, {{ site.author }}.">
+        <img src="{{ site.baseurl }}assets/img/avatar.jpg" alt="Picture" title="That's me, {{ site.author }}.">
       </figure>
       <div class="bio">
           <h1>Hi, I'm {{ site.author }}.</h1>
@@ -68,7 +68,7 @@
     </div>
     {% comment %} site-wrapper {% endcomment %}
 
-    <script src="{{ site.baseurl }}/js/main.js"></script>
+    <script src="{{ site.baseurl }}js/main.js"></script>
     {% comment %} Google Analytics {% endcomment %}
     {% if site.ga_tracking_id and site.ga_domain %}
       <script>
