--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
         <img src="{{ site.baseurl }}assets/img/avatar.jpg" alt="Picture" title="That's me, {{ site.author }}.">
       </figure>
       <div class="bio">
-          <h1>Hi, I'm {{ site.author }}.</h1>
+          <h1>{{ site.author }}</h1>
           <p>{{ site.author-bio }}</p>
       </div>
       <nav>
