--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 
     <div class="off-canvas">
       <figure class="avatar">
-        <img src="{{ site.baseurl }}assets/img/avatar.jpg" alt="Picture" title="That's me, {{ site.author }}.">
+        <img src="{{ site.baseurl }}assets/img/naruto.jpg" alt="Picture" title="That's me, {{ site.author }}.">
       </figure>
       <div class="bio">
           <h1>{{ site.author }}</h1>
