--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,21 +31,9 @@
       <nav>
         <h6>联系我</h6>
         <ul>
-          {% if site.twitter %}
-          <li><a target="_blank" href="https://twitter.com/{{ site.twitter }}">Twitter</a></li>
-          {% endif %}
           {% if site.weibo %}
-          <li><a target="_blank" href="https://weibo.com/{{ site.weibo }}">weibo</a></li>
+          <li><a target="_blank" href="https://weibo.com/{{ site.weibo }}">Weibo</a></li>
           {% endif %}          
-          {% if site.github %}
-          <li><a target="_blank" href="https://github.com/{{ site.github }}">Github</a></li>
-          {% endif %}
-          {% if site.dribbble %}
-          <li><a target="_blank" href="https://dribbble.com/{{ site.dribbble }}">Dribbble</a></li>
-          {% endif %}
-          {% if site.instagram %}
-          <li><a target="_blank" href="https://instagram.com/{{ site.instagram }}">Instagram</a></li>
-          {% endif %}
         </ul>
       </nav>
     </div>
