--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,10 @@
         <ul>
           {% if site.weibo %}
           <li><a target="_blank" href="https://weibo.com/{{ site.weibo }}">Weibo</a></li>
-          {% endif %}          
+          {% endif %}   
+          {% if site.weixin %}
+          <li>微信：yinguniang24</li>
+          {% endif %}            
         </ul>
       </nav>
     </div>
