--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,5 +30,20 @@ layout: default
         &larr; <span class="nav-title nav-title-prev">older</span>
       </a>
     {% endif %}
+  <div id="ds-thread" class="ds-thread" data-url="{{ page.url }}" data-title="{{ page.title }}" 
+   data-thread-key="{{ page.title }}"></div>
+  <script type="text/javascript">
+  var duoshuoQuery = {short_name: 'yinxiaohan'};
+  (function() {
+      var ds = document.createElement('script');
+      ds.type = 'text/javascript';ds.async = true;
+      ds.src = 'http://static.duoshuo.com/embed.js';
+      ds.charset = 'UTF-8';
+      (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(ds);
+  })();
+  </script>      
+  
   </article>
+
 </section>
+
