--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,7 +33,7 @@ layout: default
   <div id="ds-thread" class="ds-thread" data-url="{{ page.url }}" data-title="{{ page.title }}" 
    data-thread-key="{{ page.title }}"></div>
   <script type="text/javascript">
-  var duoshuoQuery = {short_name: 'yinxiaohan'};
+  var duoshuoQuery = {short_name: '{{ site.duo_short_name }}'};
   (function() {
       var ds = document.createElement('script');
       ds.type = 'text/javascript';ds.async = true;
