--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,14 +10,13 @@
 
 <form action="https://www.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="POST">
 
-<input type=hidden name="oid" value="00DO000000536oo">
-<input type=hidden name="retURL" value="http://yinxiaohan.top/">
+<input type=hidden name="oid" value="00D2800000180o0">
+<input type=hidden name="retURL" value="https://ap2.salesforce.com/00Q">
 
 <!--  ----------------------------------------------------------------------  -->
 <!--  注意：这些字段是可选的调试元素。如果希望在调试模式下进行测试，请取消这些行的留言。                               -->
 <!--  <input type="hidden" name="debug" value=1>                              -->
-<!--  <input type="hidden" name="debugEmail"                                  -->
-<!--  value="minxu-c@deloitte.com.cn">                                        -->
+<!--  <input type="hidden" name="debugEmail" value="semsfdc@163.com">         -->
 <!--  ----------------------------------------------------------------------  -->
 
 <label for="first_name">名</label><input  id="first_name" maxlength="40" name="first_name" size="20" type="text" /><br>
@@ -30,67 +29,98 @@
 
 <label for="city">城市</label><input  id="city" maxlength="40" name="city" size="20" type="text" /><br>
 
-<label for="country_code">国家/地区</label><select  id="country_code" name="country_code"><option value="">--无--</option><option value="CN">CN</option>
+<label for="state">州/省</label><input  id="state" maxlength="20" name="state" size="20" type="text" /><br>
+
+<label for="salutation">称谓</label><select  id="salutation" name="salutation"><option value="">--无--</option><option value="Mr.">Mr.</option>
+<option value="Ms.">Ms.</option>
+<option value="Mrs.">Mrs.</option>
+<option value="Dr.">Dr.</option>
+<option value="Prof.">Prof.</option>
 </select><br>
 
-<label for="state_code">州/省</label><select  id="state_code" name="state_code"><option value="">--无--</option><option value="34">34</option>
-<option value="11">11</option>
-<option value="50">50</option>
-<option value="35">35</option>
-<option value="62">62</option>
-<option value="44">44</option>
-<option value="45">45</option>
-<option value="52">52</option>
-<option value="46">46</option>
-<option value="13">13</option>
-<option value="23">23</option>
-<option value="41">41</option>
-<option value="91">91</option>
-<option value="42">42</option>
-<option value="43">43</option>
-<option value="32">32</option>
-<option value="36">36</option>
-<option value="22">22</option>
-<option value="21">21</option>
-<option value="92">92</option>
-<option value="15">15</option>
-<option value="64">64</option>
-<option value="63">63</option>
-<option value="61">61</option>
-<option value="37">37</option>
-<option value="31">31</option>
-<option value="14">14</option>
-<option value="51">51</option>
-<option value="71">71</option>
-<option value="12">12</option>
-<option value="65">65</option>
-<option value="54">54</option>
-<option value="53">53</option>
-<option value="33">33</option>
-</select><br>
-
-<label for="lead_source">潜在客户来源</label><select  id="lead_source" name="lead_source"><option value="">--无--</option><option value="官网">官网</option>
-<option value="来电">来电</option>
-<option value="微信">微信</option>
-<option value="线上营销">线上营销</option>
-<option value="厂端重购">厂端重购</option>
-<option value="集采平台">集采平台</option>
-<option value="自然到店">自然到店</option>
-</select><br>
-
-<label for="salutation">称谓</label><select  id="salutation" name="salutation"><option value="">--无--</option><option value="先生">先生</option>
-<option value="女士">女士</option>
-</select><br>
+<label for="title">职务</label><input  id="title" maxlength="40" name="title" size="20" type="text" /><br>
 
 <label for="URL">网址</label><input  id="URL" maxlength="80" name="URL" size="20" type="text" /><br>
 
-线索级别:<select  id="00NO00000022l8E" name="00NO00000022l8E" title="线索级别"><option value="">--无--</option><option value="H">H</option>
-<option value="A">A</option>
-<option value="B">B</option>
-<option value="C">C</option>
-<option value="D">D</option>
-<option value="E">E</option>
+<label for="phone">电话</label><input  id="phone" maxlength="40" name="phone" size="20" type="text" /><br>
+
+<label for="mobile">手机</label><input  id="mobile" maxlength="40" name="mobile" size="20" type="text" /><br>
+
+<label for="fax">传真</label><input  id="fax" maxlength="40" name="fax" size="20" type="text" /><br>
+
+<label for="street">街道</label><textarea name="street"></textarea><br>
+
+<label for="zip">邮政编码</label><input  id="zip" maxlength="20" name="zip" size="20" type="text" /><br>
+
+<label for="country">国家/地区</label><input  id="country" maxlength="40" name="country" size="20" type="text" /><br>
+
+<label for="description">描述</label><textarea name="description"></textarea><br>
+
+<label for="lead_source">潜在客户来源</label><select  id="lead_source" name="lead_source"><option value="">--无--</option><option value="Advertisement">Advertisement</option>
+<option value="Employee Referral">Employee Referral</option>
+<option value="External Referral">External Referral</option>
+<option value="Partner">Partner</option>
+<option value="Public Relations">Public Relations</option>
+<option value="Seminar - Internal">Seminar - Internal</option>
+<option value="Seminar - Partner">Seminar - Partner</option>
+<option value="Trade Show">Trade Show</option>
+<option value="Web">Web</option>
+<option value="Word of mouth">Word of mouth</option>
+<option value="Other">Other</option>
 </select><br>
+
+<label for="industry">行业</label><select  id="industry" name="industry"><option value="">--无--</option><option value="Agriculture">Agriculture</option>
+<option value="Apparel">Apparel</option>
+<option value="Banking">Banking</option>
+<option value="Biotechnology">Biotechnology</option>
+<option value="Chemicals">Chemicals</option>
+<option value="Communications">Communications</option>
+<option value="Construction">Construction</option>
+<option value="Consulting">Consulting</option>
+<option value="Education">Education</option>
+<option value="Electronics">Electronics</option>
+<option value="Energy">Energy</option>
+<option value="Engineering">Engineering</option>
+<option value="Entertainment">Entertainment</option>
+<option value="Environmental">Environmental</option>
+<option value="Finance">Finance</option>
+<option value="Food &amp; Beverage">Food &amp; Beverage</option>
+<option value="Government">Government</option>
+<option value="Healthcare">Healthcare</option>
+<option value="Hospitality">Hospitality</option>
+<option value="Insurance">Insurance</option>
+<option value="Machinery">Machinery</option>
+<option value="Manufacturing">Manufacturing</option>
+<option value="Media">Media</option>
+<option value="Not For Profit">Not For Profit</option>
+<option value="Other">Other</option>
+<option value="Recreation">Recreation</option>
+<option value="Retail">Retail</option>
+<option value="Shipping">Shipping</option>
+<option value="Technology">Technology</option>
+<option value="Telecommunications">Telecommunications</option>
+<option value="Transportation">Transportation</option>
+<option value="Utilities">Utilities</option>
+</select><br>
+
+<label for="rating">分级</label><select  id="rating" name="rating"><option value="">--无--</option><option value="Hot">Hot</option>
+<option value="Warm">Warm</option>
+<option value="Cold">Cold</option>
+</select><br>
+
+<label for="revenue">年收入</label><input  id="revenue" name="revenue" size="20" type="text" /><br>
+
+<label for="employees">职员数</label><input  id="employees" name="employees" size="20" type="text" value="" /><br>
+
+<label for="Campaign_ID">市场活动</label><select  id="Campaign_ID" name="Campaign_ID"><option value="">--无--</option></select><br>
+
+<input type="hidden"  id="member_status" name="member_status" value="" /><br>
+
+<label for="emailOptOut">退出邮寄列表</label><input  id="emailOptOut" name="emailOptOut" type="checkbox" value="1" /><br>
+
+<label for="faxOptOut">退出传真列表</label><input  id="faxOptOut" name="faxOptOut" type="checkbox" value="1" /><br>
+
+<label for="doNotCall">请勿致电</label><input  id="doNotCall" name="doNotCall" type="checkbox" value="1" /><br>
 
 <input type="submit" name="submit">
 
