--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 
 <input type=hidden name="oid" value="00DO000000536oo">
 <input type=hidden name="retURL" value="https://cs5.salesforce.com/00Q">
-<a href="./webCaseSand.html">创建webcase（sandbox）</a>
+<a href="/post.html">创建webcase（sandbox）</a>
 <!--  ----------------------------------------------------------------------  -->
 <!--  注意：这些字段是可选的调试元素。如果希望在调试模式下进行测试，请取消这些行的留言。                               -->
 <!--  <input type="hidden" name="debug" value=1>                              -->
