--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 <!--  ----------------------------------------------------------------------  -->
 
   <head>
-      <title>{{ site.name }} - {{ site.description }}</title>
+      <title>东南汽车测试</title>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
       <meta http-equiv="content-language" content="en-gb" />
