--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,6 +15,7 @@ layout: default
     <div itemprop="articleBody">
       {{ content }}
     </div>
+<!--    
     <div class="feat share">
       <a href="http://twitter.com/share" class="popup">
         <span class="icon-twitter"></span>
@@ -30,12 +31,13 @@ layout: default
         &larr; <span class="nav-title nav-title-prev">older</span>
       </a>
     {% endif %}
+    -->
   </article>
 	<div class="ds-thread" data-thread-key="{{ page.title }}" data-title="{{ page.title }}" data-url="{{ page.url }}"></div>
 <!-- 多说评论框 end -->
 <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
 <script type="text/javascript">
-var duoshuoQuery = {short_name:"yinxiaohan"};
+/* var duoshuoQuery = {short_name:"yinxiaohan"};
 	(function() {
 		var ds = document.createElement('script');
 		ds.type = 'text/javascript';ds.async = true;
@@ -43,7 +45,7 @@ var duoshuoQuery = {short_name:"yinxiaohan"};
 		ds.charset = 'UTF-8';
 		(document.getElementsByTagName('head')[0] 
 		 || document.getElementsByTagName('body')[0]).appendChild(ds);
-	})();
+	})(); */
 	</script>
 <!-- 多说公共JS代码 end -->
    
